kubernetes/observability-demo/templates/entry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entry
spec:
  selector:
    app: entry
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: http-rest-api
    protocol: TCP
    port: 5500
    targetPort: 5500
