kubernetes/observability-demo/templates/sensor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor
spec:
  selector:
    app: sensor
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: http-rest-api
    protocol: TCP
    port: 5501
    targetPort: 5501
