kubernetes/observability-demo/templates/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
spec:
  selector:
    app: store
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: http-rest-api
    protocol: TCP
    port: 5502
    targetPort: 5502
